# ModernCMake

lib_export/: CMakeLists.txt  FooConfig.cmake.in
lib_export/include/: bar.h  dep.h  foo.h
lib_export/src/: app.cpp  bar.cpp  dep.cpp  foo.cpp
lib_import/: CMakeLists.txt  main.cpp
